幻燈片完成

--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Build School - 軟體人才培訓 軟體工程師培訓 程式教育訓練 | 打造更有競爭力的軟體工程師職涯</title>
-    <link rel="stylesheet" href="all.css">
     <script src="https://kit.fontawesome.com/6f7f75ad47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
     <link rel="Shortcut Icon" type="image/x-icon" href="img/BSlogo.png" />
+    <link rel="stylesheet" href="all.css">
 </head>
 
 <body>
@@ -55,32 +55,79 @@
     <!-- slide 幻燈片 -->
     <div class="img-slide">
         <div class="owl-carousel owl-theme">
-            <div>
-                <img src="img/slide-1.png">
+            <div class="slide-bg bg-1">
+                <div class="content">
+                    <h1>BUILD SCHOOL</h1>
+                    <p>Build School 是軟體開發教育的先鋒，為學生打造更有競爭力的職涯</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="img/slide-2.png">
+            <div class="slide-bg bg-2">
+                <div class="content">
+                    <h1>想搭上火箭?<br>
+                        門票是給想成為軟體工程師的你</h1>
+                    <p>BUILD SCHOOL - DEVELOPER CAREER BUILDER</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="img/slide-3.png">
+            <div class="slide-bg bg-3">
+                <div class="content">
+                    <h1>這裏沒有考試<br>
+                        只有滿滿的程式碼</h1>
+                    <p>NO TEST BUT YOUR CODES</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="img/slide-4.png">
+            <div class="slide-bg bg-4">
+                <div class="content">
+                    <h1>前往峰頂的路上<br>
+                        有人帶!</h1>
+                    <p>START CODING AND GET COACHED FROM MENTORS</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="img/slide-5.png">
+            <div class="slide-bg bg-5">
+                <div class="content">
+                    <h1>動手做出東西<br>
+                        才能解決問題</h1>
+                    <p>BUILD SOMETHING AND SOLVE THE PROBLEM, THAT'S MY STYLE</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="img/slide-6.png">
-            </div>
-            <div>
-                <img src="img/slide-7.png">
-            </div>
-            <div>
-                <img src="img/slide-8.png">
-            </div>
-            <div>
-                <img src="img/slide-9.png">
+            <div class="slide-bg bg-6"></div>
+            <div class="slide-bg bg-7"></div>
+            <div class="slide-bg bg-8"></div>
+            <div class="slide-bg bg-9">
+                <div class="content">
+                    <h1>BUILD SCHOOL</h1>
+                    <p>Build School is a pioneer of software developer education and career builder for college students
+                    </p>
+                    <div class="btn">
+                        <a href="">Apply Now(Taipei Class)</a>
+                        <a href="">Apply Now(HsinChu Class)</a>
+                        <a href="">Apply Now(Chung Hua University)</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -453,6 +500,7 @@
                 nav: true,
                 margin: 40,
                 center: true,
+                autoplay: true,
                 // navText: [
                 //     '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-left.png"/>',
                 //     '<img src="https://img.icons8.com/ios-glyphs/30/000000/double-right.png"/>'
