幻燈片黑色濾鏡完成

--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -56,6 +56,7 @@
     <div class="img-slide">
         <div class="owl-carousel owl-theme">
             <div class="slide-bg bg-1">
+                <div class="black-layer"></div>
                 <div class="content">
                     <h1>BUILD SCHOOL</h1>
                     <p>Build School 是軟體開發教育的先鋒，為學生打造更有競爭力的職涯</p>
@@ -67,6 +68,7 @@
                 </div>
             </div>
             <div class="slide-bg bg-2">
+                <div class="black-layer"></div>
                 <div class="content">
                     <h1>想搭上火箭?<br>
                         門票是給想成為軟體工程師的你</h1>
@@ -79,6 +81,7 @@
                 </div>
             </div>
             <div class="slide-bg bg-3">
+                <div class="black-layer"></div>
                 <div class="content">
                     <h1>這裏沒有考試<br>
                         只有滿滿的程式碼</h1>
@@ -91,6 +94,7 @@
                 </div>
             </div>
             <div class="slide-bg bg-4">
+                <div class="black-layer"></div>
                 <div class="content">
                     <h1>前往峰頂的路上<br>
                         有人帶!</h1>
@@ -103,6 +107,7 @@
                 </div>
             </div>
             <div class="slide-bg bg-5">
+                <div class="black-layer"></div>
                 <div class="content">
                     <h1>動手做出東西<br>
                         才能解決問題</h1>
@@ -118,6 +123,7 @@
             <div class="slide-bg bg-7"></div>
             <div class="slide-bg bg-8"></div>
             <div class="slide-bg bg-9">
+                <div class="black-layer"></div>
                 <div class="content">
                     <h1>BUILD SCHOOL</h1>
                     <p>Build School is a pioneer of software developer education and career builder for college students
@@ -471,7 +477,7 @@
                 <h3>合作及接洽</h3>
                 <span>有興趣軟體工程師徵才、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</span>
                 <br>
-                <a href=""><span>email: contact@build-school.com 電話: 02-66057606</span></a>
+                <a href=""><span>email: contact@build-school.com<br>電話: 02-66057606</span></a>
                 <br>
                 <span>​台北: 台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)</span>
                 <br>
