--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <li>
                 <a href="BSHomeWork4/index.html" target="_blank">作業04：TOYOTA網站切版，position練習</a>
             </li>
+            <li>
+                <a href="BSHomeWork5/index.html" target="_blank">作業05：BuildSchool網站復刻(RWD)</a>
+            </li>
         </ul>
     </div>
 
