RWD追加768-1200的排版

--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -141,7 +141,7 @@
     <!-- 介紹 -->
     <div class="info">
         <div class="container row">
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <img src="img/Build School-1.png">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <h2>實作及就業導向的軟體開發學校</h2>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
             </div>
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <img src="img/Build School-2.png">
@@ -177,7 +177,7 @@
                     </div>
                 </div>
             </div>
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <h2>打造專案作品的學習方式</h2>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
             </div>
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <img src="img/Build School-3.png">
@@ -197,7 +197,7 @@
                     </div>
                 </div>
             </div>
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <h2>真正企業職場所需技能</h2>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <img src="img/Build School-4.png">
@@ -217,7 +217,7 @@
                     </div>
                 </div>
             </div>
-            <div class="info-content col-12 col-xl-6">
+            <div class="info-content col-12 col-md-6 col-xl-6">
                 <div class="item">
                     <div class="title">
                         <h2>企業導師的連結</h2>
@@ -245,7 +245,7 @@
 
     <div class="schedule">
         <div class="container row">
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <h2>第 1 - 4 個月</h2>
@@ -260,7 +260,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <h2>第 5 - 6 個月</h2>
@@ -276,7 +276,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <h2>第 6 - 7 月</h2>
@@ -292,7 +292,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <h2>未來及展望</h2>
@@ -324,7 +324,7 @@
 
     <div class="tools">
         <div class="container row">
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <div class="img-area">
@@ -341,7 +341,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <div class="img-area">
@@ -359,7 +359,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <div class="img-area">
@@ -376,7 +376,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="pic-area">
                         <div class="img-area">
@@ -410,56 +410,56 @@
 
     <div class="compony">
         <div class="container row">
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-17.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-18.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-19.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-20.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-21.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-22.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-23.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="wall-content col-12 col-xl-3">
+            <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
                     <div class="img-area">
                         <img src="img/Build School-24.png" alt="">
