--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -493,6 +493,11 @@
                     </div>
                 </div>
             </div>
+            <div class="gotop">
+                <a href="#">
+                    <i class="fas fa-chevron-up"></i>
+                </a>
+            </div>
         </div>
     </div>
 
