--- a/BSHomeWork6/index.html
+++ b/BSHomeWork6/index.html
@@ -378,6 +378,71 @@
         </div>
     </div>
 
+    <!-- compony 公司企業 logo圖牆 -->
+
+    <div class="compony">
+        <div class="container">
+            <div class="row">
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-17.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-18.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-19.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-20.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-21.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-22.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-23.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="wall-content col-12 col-md-6 col-xl-3">
+                    <div class="item">
+                        <div class="img-area">
+                            <img src="img/Build School-24.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
