公司圖牆間隔

--- a/BSHomeWork6/index.html
+++ b/BSHomeWork6/index.html
@@ -382,57 +382,57 @@
 
     <div class="compony">
         <div class="container">
-            <div class="row">
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+            <div class="row text-center">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-17.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-18.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-19.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-20.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-21.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-22.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-23.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="wall-content col-12 col-md-6 col-xl-3">
+                <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
                     <div class="item">
                         <div class="img-area">
                             <img src="img/Build School-24.png" alt="">
