--- a/BSHomeWork5/index.html
+++ b/BSHomeWork5/index.html
@@ -396,7 +396,7 @@
             </div>
         </div>
     </div>
-    <!-- compony 公司企業 橫幅 -->
+    <!-- company 公司企業 橫幅 -->
 
     <div class="banner">
         <div class="blue-layer">
@@ -406,9 +406,9 @@
         </div>
     </div>
 
-    <!-- compony 公司企業 logo圖牆 -->
+    <!-- company 公司企業 logo圖牆 -->
 
-    <div class="compony">
+    <div class="company">
         <div class="container row">
             <div class="wall-content col-12 col-md-6 col-xl-3">
                 <div class="item">
