--- a/BSHomeWork6/index.html
+++ b/BSHomeWork6/index.html
@@ -12,7 +12,9 @@
 
     <!-- my CSS -->
     <link rel="stylesheet" href="all.css">
-    <title>Hello, world!</title>
+    <script src="https://kit.fontawesome.com/6f7f75ad47.js" crossorigin="anonymous"></script>
+    <link rel="Shortcut Icon" type="image/x-icon" href="img/BSlogo.png" />
+    <title>Build School - 軟體人才培訓 軟體工程師培訓 程式教育訓練 | 打造更有競爭力的軟體工程師職涯</title>
 </head>
 
 <body>
@@ -219,7 +221,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-5.png" class="h-100" alt="">
                             </div>
-                            <h4 class="title text-danger">程式基礎教學</h4>
+                            <h4 class="title text-danger my-4">程式基礎教學</h4>
                         </div>
                         <ul class="d-flex flex-column align-items-start">
                             <li>業界實戰講師</li>
@@ -234,7 +236,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-6.png" class="h-100" alt="">
                             </div>
-                            <h4 class="title text-danger">作品導向實作</h4>
+                            <h4 class="title text-danger my-4">作品導向實作</h4>
                         </div>
                         <ul>
                             <li>Web / App 作品開發 - 企業導師指導</li>
@@ -250,7 +252,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-7.png" class="h-100" alt="">
                             </div>
-                            <h4 class="title text-danger">作品發表</h4>
+                            <h4 class="title text-danger my-4">作品發表</h4>
                         </div>
                         <ul>
                             <li>簡報及溝通技巧</li>
@@ -266,7 +268,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-8.png" class="h-100" alt="">
                             </div>
-                            <h4 class="title text-danger">就業及企業導師諮詢</h4>
+                            <h4 class="title text-danger my-4">就業及企業導師諮詢</h4>
                         </div>
                         <ul>
                             <li>就業媒合或未來職涯諮詢</li>
@@ -299,7 +301,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-9.png" class="h-100" alt="">
                             </div>
-                            <div class="img-area">
+                            <div class="img-area my-4">
                                 <img src="img/Build School-10.png" class="h-100" alt="">
                             </div>
                             <h4 class="title">版本控管及程式碼管理</h4>
@@ -317,7 +319,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-11.png" class="h-100" alt="">
                             </div>
-                            <div class="img-area">
+                            <div class="img-area my-4">
                                 <img src="img/Build School-12.png" class="h-100" alt="">
                             </div>
                             <h4 class="title">作品開發及團隊管理</h4>
@@ -335,7 +337,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-13.png" class="h-100" alt="">
                             </div>
-                            <div class="img-area">
+                            <div class="img-area my-4">
                                 <img src="img/Build School-14.png" class="h-100" alt="">
                             </div>
                             <h4 class="title">雲端平台及服務</h4>
@@ -352,7 +354,7 @@
                             <div class="img-area">
                                 <img src="img/Build School-15.png" class="h-100" alt="">
                             </div>
-                            <div class="img-area">
+                            <div class="img-area my-4">
                                 <img src="img/Build School-16.png" class="h-100" alt="">
                             </div>
                             <h4 class="title">團隊溝通協作及通知</h4>
@@ -380,7 +382,7 @@
 
     <!-- compony 公司企業 logo圖牆 -->
 
-    <div class="compony">
+    <div class="company">
         <div class="container">
             <div class="row text-center">
                 <div class="wall-content col-12 col-md-6 col-xl-3 my-5">
@@ -442,6 +444,39 @@
             </div>
         </div>
     </div>
+
+    <!-- footer -->
+
+    <div class="footer pt-4">
+        <div class="container">
+            <div class="item">
+                <h3>合作及接洽</h3>
+                <p class="m-auto">有興趣軟體工程師徵才、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</p>
+                <p><a href="" class="text-body">email: contact@build-school.com<br>電話: 02-66057606</a></p>
+                <p class="m-auto">​台北: 台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)</p>
+                <p class="m-auto">新竹: 中華大學行政大樓圖資處</p>
+                <div class="icon-bar d-flex flex-dec justify-content-between">
+                    <div class="icon">
+                        <a href=""><i class="fab fa-facebook-square"></i></a>
+                        <a href=""><i class="fab fa-youtube-square"></i></a>
+                    </div>
+                    <div class="date">
+                        <a href="" class="text-body"><u>隱私權宣告</u></a>
+                        <span>© 2020 by Build School</span>
+                    </div>
+                </div>
+            </div>
+            <div class="gotop text-center">
+                <a href="#" class="text-body">
+                    <i class="fas fa-chevron-up"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <a href="#" class="flow-messenger">
+        <i class="fab fa-facebook-messenger"></i>
+    </a>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
