幻燈片內容新增

--- a/BSHomeWork6/index.html
+++ b/BSHomeWork6/index.html
@@ -64,34 +64,90 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/slide-1.png" class="d-block w-100" alt="...">
+                <div class="content">
+                    <h1>BUILD SCHOOL</h1>
+                    <p class="mb-5">Build School 是軟體開發教育的先鋒，為學生打造更有競爭力的職涯</p>
+                    <div class="btn">
+                        <a href="" class="text-white ">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="" class="text-white ">新竹班簡介(2020/12月後開課)</a>
+                        <a href="" class="text-white ">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/slide-2.png" class="d-block w-100" alt="...">
+                <div class="content">
+                    <h1>想搭上火箭?<br>
+                        門票是給想成為軟體工程師的你</h1>
+                    <p>BUILD SCHOOL - DEVELOPER CAREER BUILDER</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/slide-3.png" class="d-block w-100" alt="...">
+                <div class="content">
+                    <h1>這裏沒有考試<br>
+                        只有滿滿的程式碼</h1>
+                    <p>NO TEST BUT YOUR CODES</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/slide-4.png" class="d-block w-100" alt="...">
+                <div class="content">
+                    <h1>前往峰頂的路上<br>
+                        有人帶!</h1>
+                    <p>START CODING AND GET COACHED FROM MENTORS</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/slide-5.png" class="d-block w-100" alt="...">
+                <div class="content">
+                    <h1>動手做出東西<br>
+                        才能解決問題</h1>
+                    <p>BUILD SOMETHING AND SOLVE THE PROBLEM, THAT'S MY STYLE</p>
+                    <div class="btn">
+                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
+                        <a href="">新竹班簡介(2020/12月後開課)</a>
+                        <a href="">即刻報名(中華大學學生)</a>
+                    </div>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/slide-6.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/slide-7.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/slide-8.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/slide-9.png" class="d-block w-100" alt="...">
+                <div class="content">
+                    <h1>BUILD SCHOOL</h1>
+                    <p>Build School is a pioneer of software developer education and career builder for college students
+                    </p>
+                    <div class="btn">
+                        <a href="">Apply Now(Taipei Class)</a>
+                        <a href="">Apply Now(HsinChu Class)</a>
+                        <a href="">Apply Now(Chung Hua University)</a>
+                    </div>
+                </div>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
