--- a/BSHomeWork6/index.html
+++ b/BSHomeWork6/index.html
@@ -19,43 +19,42 @@
 
 <body>
     <div class="header">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href=""><img src="img/BSlogo.png" alt=""></a>
-                <h3 class="mr-auto">Build School</h3>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <!-- <div class="container"> -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href=""><img src="img/BSlogo.png" alt=""></a>
+            <h3 class="mr-auto">Build School</h3>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">台北班簡介 <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">新竹班簡介</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">中華大學校內班簡介</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">歷屆老師</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">關於</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">問題及洽詢</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">台北班簡介 <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">新竹班簡介</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">中華大學校內班簡介</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">歷屆老師</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">關於</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">問題及洽詢</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- </div> -->
     </div>
 
     <!-- slide 幻燈片 -->
@@ -77,9 +76,9 @@
                     <h1>BUILD SCHOOL</h1>
                     <p class="mb-5">Build School 是軟體開發教育的先鋒，為學生打造更有競爭力的職涯</p>
                     <div class="btn">
-                        <a href="" class="text-white ">台北班簡介及報名(2020/10月後開課)</a>
-                        <a href="" class="text-white ">新竹班簡介(2020/12月後開課)</a>
-                        <a href="" class="text-white ">即刻報名(中華大學學生)</a>
+                        <p><a href="" class="text-white ">台北班簡介及報名(2020/10月後開課)</a></p>
+                        <p><a href="" class="text-white ">新竹班簡介(2020/12月後開課)</a></p>
+                        <p><a href="" class="text-white ">即刻報名(中華大學學生)</a></p>
                     </div>
                 </div>
             </div>
@@ -89,9 +88,9 @@
                         門票是給想成為軟體工程師的你</h1>
                     <p>BUILD SCHOOL - DEVELOPER CAREER BUILDER</p>
                     <div class="btn">
-                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
-                        <a href="">新竹班簡介(2020/12月後開課)</a>
-                        <a href="">即刻報名(中華大學學生)</a>
+                        <p><a href="">台北班簡介及報名(2020/10月後開課)</a></p>
+                        <p><a href="">新竹班簡介(2020/12月後開課)</a></p>
+                        <p><a href="">即刻報名(中華大學學生)</a></p>
                     </div>
                 </div>
             </div>
@@ -101,9 +100,9 @@
                         只有滿滿的程式碼</h1>
                     <p>NO TEST BUT YOUR CODES</p>
                     <div class="btn">
-                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
-                        <a href="">新竹班簡介(2020/12月後開課)</a>
-                        <a href="">即刻報名(中華大學學生)</a>
+                        <p><a href="">台北班簡介及報名(2020/10月後開課)</a></p>
+                        <p><a href="">新竹班簡介(2020/12月後開課)</a></p>
+                        <p><a href="">即刻報名(中華大學學生)</a></p>
                     </div>
                 </div>
             </div>
@@ -113,9 +112,9 @@
                         有人帶!</h1>
                     <p>START CODING AND GET COACHED FROM MENTORS</p>
                     <div class="btn">
-                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
-                        <a href="">新竹班簡介(2020/12月後開課)</a>
-                        <a href="">即刻報名(中華大學學生)</a>
+                        <p><a href="">台北班簡介及報名(2020/10月後開課)</a></p>
+                        <p><a href="">新竹班簡介(2020/12月後開課)</a></p>
+                        <p><a href="">即刻報名(中華大學學生)</a></p>
                     </div>
                 </div>
             </div>
@@ -125,9 +124,9 @@
                         才能解決問題</h1>
                     <p>BUILD SOMETHING AND SOLVE THE PROBLEM, THAT'S MY STYLE</p>
                     <div class="btn">
-                        <a href="">台北班簡介及報名(2020/10月後開課)</a>
-                        <a href="">新竹班簡介(2020/12月後開課)</a>
-                        <a href="">即刻報名(中華大學學生)</a>
+                        <p><a href="">台北班簡介及報名(2020/10月後開課)</a></p>
+                        <p><a href="">新竹班簡介(2020/12月後開課)</a></p>
+                        <p><a href="">即刻報名(中華大學學生)</a></p>
                     </div>
                 </div>
             </div>
@@ -143,9 +142,9 @@
                     <p>Build School is a pioneer of software developer education and career builder for college students
                     </p>
                     <div class="btn">
-                        <a href="">Apply Now(Taipei Class)</a>
-                        <a href="">Apply Now(HsinChu Class)</a>
-                        <a href="">Apply Now(Chung Hua University)</a>
+                        <p><a href="">Apply Now(Taipei Class)</a></p>
+                        <p><a href="">Apply Now(HsinChu Class)</a></p>
+                        <p><a href="">Apply Now(Chung Hua University)</a></p>
                     </div>
                 </div>
             </div>
