--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <li>
                 <a href="BSHomeWork5/index.html" target="_blank">作業05：BuildSchool網站復刻(RWD)</a>
             </li>
+            <li>
+                <a href="BSHomeWork6/index.html" target="_blank">作業06：BuildSchool網站復刻(Bootstrap)</a>
+            </li>
         </ul>
     </div>
 
