--- a/BSHomeWork7/index.html
+++ b/BSHomeWork7/index.html
@@ -812,7 +812,7 @@
                         <h6>TAKEN </h6>
                         <p>COMPANY : TAKEN (타켄)</p>
                         <p>CEO : 이서진</p>
-                        <p><a href="">E-MAIL : turbotek01@gmail.com</a></p>
+                        <p>E-MAIL : <a href="">turbotek01@gmail.com</a></p>
                         <p>ADDRESS : 13220 경기도 성남시 중원구 사기막골로 45 (상대원동)</p>
                         <p>14 우림라이온스밸리 2차 A동 910호</p>
                         <p>BUSINESS LICENSE : 1054514474</p>
@@ -828,6 +828,7 @@
                             <p>OPEN : AM 10:00 ~ PM 06:00 / Sat, Sun, Holiday OFF</p>
                         </div>
                         <div class="item">
+                            <br>
                             <h6>BANK ACCOUNT</h6>
                             <p>예금주 : 이서진</p>
                             <p>신한은행 110-139-106182</p>
@@ -836,10 +837,10 @@
                 </div>
                 <div class="col-12 col-md-3">
                     <div class="row">
-                        <div class="item col-12 col-md-12">
-                            <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                        <div class="item icon col-12 col-md-12">
+                            <img src="img/sns_facebook.png" alt="">
+                            <img src="img/sns_instagram.png" alt="">
+                            <img src="img/sns_youtube.png" alt="">
                         </div>
                         <div class="item col-12 col-md-12">
                             <h6>DELIVERY INFO</h6>
@@ -849,37 +850,34 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="copyright">
-            <div class="container">
-                <div class="row justify-content-between align-items-center">
-                    <div class="item">
-                        <ul class="d-flex">
-                            <li><a href="">이용약관</a></li>
-                            <li><a href="">개인정보취급방침</a></li>
-                            <li><a href="">이용안내</a></li>
-                        </ul>
-                    </div>
-                    <div class="item">
-                        <p>Copyright © TAKEN. All rights reserved</p>
+            <div class="copyright">
+                <div class="container">
+                    <div class="row justify-content-between align-items-center">
+                        <div class="item">
+                            <a href="">이용약관</a>
+                            <a href="">개인정보취급방침</a>
+                            <a href="">이용안내</a>
+                        </div>
+                        <div class="item">
+                            <p>Copyright © TAKEN. All rights reserved</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-    </script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
