--- a/BSHomeWork7/index.html
+++ b/BSHomeWork7/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- 導覽列 -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-sm fixed-top">
         <a class="navbar-brand" href="#"><img src="img/taken_top_logo.png" alt=""></a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,8 +97,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false"><img src="img/search_icon_b.png" alt=""></a>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownId">
-                        <div class="input-group mb-3 ">
+                    <div class="dropdown-menu dropdown-menu-right dropdown-search" aria-labelledby="dropdownId">
+                        <div class="input-group">
                             <input type="text" class="form-control" aria-label="Recipient's username"
                                 aria-describedby="button-addon2">
                             <div class="input-group-append">
@@ -119,23 +119,31 @@
             <!-- <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li> -->
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner vh-100">
             <div class="carousel-item active">
-                <img src="img/mainbnr_13.jpg" class="d-block w-100" alt="...">
+                <img src="img/mainbnr_13.jpg" class="d-block" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Let's fish in my style!</h5>
                     <h1>TAKEN</h1>
                     <a href="" class="d-inline-block mt-5">About Us</a>
                 </div>
             </div>
-            <!-- <div class="carousel-item active">
-                <img src="img/mainbnr_13.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-item active">
+                <img src="img/mainbnr_13.jpg" class="d-block" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Let's fish in my style!</h5>
                     <h1>TAKEN</h1>
                     <a href="" class="d-inline-block mt-5">About Us</a>
                 </div>
-            </div> -->
+            </div>
+            <div class="carousel-item active">
+                <img src="img/mainbnr_13.jpg" class="d-block" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Let's fish in my style!</h5>
+                    <h1>TAKEN</h1>
+                    <a href="" class="d-inline-block mt-5">About Us</a>
+                </div>
+            </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -177,7 +185,7 @@
         <h5 class="text-center">추천상품</h5>
         <div class="card bg-white text-dark border-0">
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-1.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -188,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-2.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -199,7 +207,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-3.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -210,7 +218,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-4.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -221,7 +229,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-5.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -232,7 +240,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-6.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -243,7 +251,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-7.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -254,7 +262,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="item">
                         <img src="img/wall1-8.jpg" class="card-img h-100" alt="...">
                         <div class="card-img-overlay d-flex flex-column justify-content-end text-center">
@@ -284,7 +292,7 @@
     <div class="img-wall-2">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -302,7 +310,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -320,7 +328,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -338,7 +346,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -358,7 +366,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -376,7 +384,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -394,7 +402,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-7.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -412,7 +420,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -431,7 +439,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-9.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -448,7 +456,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-10.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -465,7 +473,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -482,7 +490,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-12.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -501,7 +509,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-13.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -518,7 +526,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-14.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -535,7 +543,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-8.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -552,7 +560,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-16.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -571,7 +579,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-17.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -588,7 +596,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-7.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -605,7 +613,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall2-19.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -622,7 +630,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall1-6.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -641,7 +649,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall3-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -658,7 +666,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall3-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -675,7 +683,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall3-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -692,7 +700,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall3-4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -711,7 +719,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall3-5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -728,7 +736,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall4-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -745,7 +753,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall4-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -762,7 +770,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall4-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -781,7 +789,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
                         <img src="img/wall4-4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
