--- a/BSHomeWork7/index.html
+++ b/BSHomeWork7/index.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="all.css">
     <script src="https://kit.fontawesome.com/6f7f75ad47.js" crossorigin="anonymous"></script>
-
-    <title>Hello, world!</title>
+    <link rel="Shortcut Icon" type="image/x-icon" href="img/favicon_20180830122640.ico" />
+    <title>TAKEN 타켄</title>
 </head>
 
 <body>
