--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             <li>
                 <a href="BSHomeWork6/index.html" target="_blank">作業06：BuildSchool網站復刻(Bootstrap)</a>
             </li>
+            <li>
+                <a href="BSHomeWork7/index.html" target="_blank">作業07：TAKEN網站切版(Bootstrap)</a>
+            </li>
         </ul>
     </div>
 
