導覽列、幻燈片、footer修改

--- a/BSHomeWork7/index.html
+++ b/BSHomeWork7/index.html
@@ -19,9 +19,9 @@
 <body>
 
     <!-- 導覽列 -->
-    <nav class="navbar navbar-expand-sm fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
         <a class="navbar-brand" href="#"><img src="img/taken_top_logo.png" alt=""></a>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+        <button class="navbar-toggler d-md-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -116,29 +116,29 @@
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <!-- <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li> -->
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner vh-100">
             <div class="carousel-item active">
                 <img src="img/mainbnr_13.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-flex flex-column align-items-center">
                     <h5>Let's fish in my style!</h5>
                     <h1>TAKEN</h1>
                     <a href="" class="d-inline-block mt-5">About Us</a>
                 </div>
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="img/mainbnr_13.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-flex flex-column align-items-center">
                     <h5>Let's fish in my style!</h5>
                     <h1>TAKEN</h1>
                     <a href="" class="d-inline-block mt-5">About Us</a>
                 </div>
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="img/mainbnr_13.jpg" class="d-block" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-flex flex-column align-items-center">
                     <h5>Let's fish in my style!</h5>
                     <h1>TAKEN</h1>
                     <a href="" class="d-inline-block mt-5">About Us</a>
@@ -828,33 +828,29 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <div class="row">
-                        <div class="item">
-                            <h6>CS CENTER</h6>
-                            <p>TEL : 031-747-7153</p>
-                            <p>FAX : 031-747-7163</p>
-                            <p>OPEN : AM 10:00 ~ PM 06:00 / Sat, Sun, Holiday OFF</p>
-                        </div>
-                        <div class="item">
-                            <br>
-                            <h6>BANK ACCOUNT</h6>
-                            <p>예금주 : 이서진</p>
-                            <p>신한은행 110-139-106182</p>
-                        </div>
+                    <div class="item">
+                        <h6>CS CENTER</h6>
+                        <p>TEL : 031-747-7153</p>
+                        <p>FAX : 031-747-7163</p>
+                        <p>OPEN : AM 10:00 ~ PM 06:00 / Sat, Sun, Holiday OFF</p>
+                    </div>
+                    <div class="item">
+                        <br>
+                        <h6>BANK ACCOUNT</h6>
+                        <p>예금주 : 이서진</p>
+                        <p>신한은행 110-139-106182</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-3">
-                    <div class="row">
-                        <div class="item icon col-12 col-md-12">
-                            <img src="img/sns_facebook.png" alt="">
-                            <img src="img/sns_instagram.png" alt="">
-                            <img src="img/sns_youtube.png" alt="">
-                        </div>
-                        <div class="item col-12 col-md-12">
-                            <h6>DELIVERY INFO</h6>
-                            <p>배송조회 : 로젠택배 (배송조회)</p>
-                            <p>반송주소 : 13220 경기도 성남시 중원구 사기막골로 45 (상대원동) 14 우림라이온스밸리 2차 A동 910호</p>
-                        </div>
+                    <div class="item icon">
+                        <img src="img/sns_facebook.png" alt="">
+                        <img src="img/sns_instagram.png" alt="">
+                        <img src="img/sns_youtube.png" alt="">
+                    </div>
+                    <div class="item">
+                        <h6>DELIVERY INFO</h6>
+                        <p>배송조회 : 로젠택배 (배송조회)</p>
+                        <p>반송주소 : 13220 경기도 성남시 중원구 사기막골로 45 (상대원동) 14 우림라이온스밸리 2차 A동 910호</p>
                     </div>
                 </div>
             </div>
