刪除邊線、footer響應式

--- a/BSHomeWork7/index.html
+++ b/BSHomeWork7/index.html
@@ -871,6 +871,11 @@
         </div>
     </div>
 
+    <!-- totop按鈕 -->
+    <div class="gotop">
+        <a href=""><img src="img/arrow_top.png" alt=""></a>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
