--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -37,12 +37,62 @@
                     <a href=""><img src="img/logo.png" alt="Naturio"></a>
                 </div>
                 <nav class="header-navi">
-                    <a href="#" class="nav-link">HOME</a>
-                    <a href="#" class="nav-link">ABOUT</a>
-                    <a href="#" class="nav-link">FEATURES ▼</a>
-                    <a href="#" class="nav-link">BLOG ▼</a>
-                    <a href="#" class="nav-link">SHOP ▼</a>
-                    <a href="#" class="nav-link">CONTACTS</a>
+                    <div class="item"><a href="#" class="nav-link">HOME</a></div>
+                    <div class="item"><a href="#" class="nav-link">ABOUT</a></div>
+                    <div class="item features-list">
+                        <a href="#" class="nav-link">FEATURES ▼</a>
+                        <div class="sub-item">
+                            <div class="container">
+                                <div class="list features-header">
+                                    <h3>Headers</h3>
+                                    <ul>
+                                        <li><a href="">Header Style 1</a></li>
+                                        <li><a href="">Header Style 2</a></li>
+                                        <li><a href="">Header Style 3</a></li>
+                                        <li><a href="">Header Style 4</a></li>
+                                        <li><a href="">Header Style 5</a></li>
+                                        <li><a href="">Header Style 6</a></li>
+                                        <li><a href="">Header Style 7</a></li>
+                                    </ul>
+                                </div>
+                                <div class="list features-footers">
+                                    <h3>Footers</h3>
+                                    <ul>
+                                        <li><a href="">Footer Style 1</a></li>
+                                        <li><a href="">Footer Style 2</a></li>
+                                        <li><a href="">Footer Style 3</a></li>
+                                    </ul>
+                                </div>
+                                <div class="list features-pages">
+                                    <div class="features-footers">
+                                        <h3>Pages</h3>
+                                        <ul>
+                                            <li><a href="">Maintenance</a></li>
+                                            <li><a href="">Search Results</a></li>
+                                            <li><a href="">Typography</a></li>
+                                            <li><a href="">FAQ</a></li>
+                                            <li><a href="">Page Not Found</a></li>
+                                            <li><a href="">Documentation</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="list features-pages">
+                                    <div class="features-footers">
+                                        <h3>Pages</h3>
+                                        <ul>
+                                            <li><a href="">About</a></li>
+                                            <li><a href="">Contacts</a></li>
+                                            <li><a href="">Our Team</a></li>
+                                            <li><a href="">Team Member</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item"><a href="#" class="nav-link">BLOG ▼</a></div>
+                    <div class="item"><a href="#" class="nav-link">SHOP ▼</a></div>
+                    <div class="item"><a href="#" class="nav-link">CONTACTS</a></div>
                 </nav>
             </div>
         </div>
